# src/controllers/testController.ts
@@ -1,18 +1,18 @@
-import { Controller, Route, Get, Tags } from 'tsoa';
-@Route('users')
-@Tags('testing')
-export class BaseController extends Controller {
-  @Get('')
-  public async getUser(): Promise<any> {
+import { dataMallConnector } from "../api/dataMall";
+import { Controller, Route, Get } from "tsoa";
+
+@Route("bus")
+export class BusController extends Controller {
+  @Get("route/{skipValue}")
+  public async getRoutes(skipValue?: number): Promise<Response | undefined> {
+    let response;
     try {
-      // const dao = new dataMall();
-      // const response = await dao.test();
-      // console.log(response.json());
+      const conn = new dataMallConnector();
+      response = await conn.getBusRoutes(skipValue ? skipValue : 0);
     } catch (e) {
       console.log(e);
     }
-
-    return 'hello';
+    return response;
   }
 }
 
